Adição das tag de img com figuras para compor a pagina

--- a/index.html
+++ b/index.html
@@ -1,13 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Gerenciamento de Tarefas</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
-</body>
+    <body>
+        <div class="task-manager">
+            <!-- left bar starts -->
+            <div class="left-bar">
+                <div class="upper-part">
+                    <div class="actions">
+                        <div class="circle"></div>
+                        <div class="circle-2"></div>
+                    </div>
+                </div>
+                <!-- left content starts -->
+                <div class="left-content">
+                    <ul class="actions-list">
+                        <li class="item">
+                            <img src="svg/inbox.svg" alt="" class="feather feather-inbox">
+                            <span>Inbox</span>
+                        </li>
+
+                        <li class="item">
+                            <img src="svg/star.svg" alt="" class="feather feather-star">
+                            <span>Today</span>
+                        </li>
+
+                        <li class="item">
+                            <img src="svg/calender.svg" alt="" class="feather feather-calendar">
+                            <span>Upcoming</span>
+                        </li>
+
+                        <li class="item">
+                            <img src="svg/hash.svg" alt="" class="feather feather-hash">
+                            <span>Important</span>
+                        </li>
+
+                        <li class="item">
+                            <img src="svg/users.svg" alt="" class="feather feather-users">
+                            <span>Mentings</span>
+                        </li>
+
+                        <li class="item">
+                            <img src="svg/trash.svg" alt="" class="feather feather-trash">
+                            <span>Trash</span>
+                        </li>
+                    </ul>
+                    <ul class="category-list">
+                        <li class="item">
+                            <img src="svg/users.svg" alt="" class="feather feather-users">
+                            <span>Family</span>
+                        </li>
+
+                        <li class="item">
+                            <img src="svg/sun.svg" alt="" class="feather feather-sun">
+                            <span>Vacation</span>
+                        </li>
+
+                        <li class="item">
+                            <img src="svg/trending.svg" alt="" class="feather feather-trending-up">
+                            <span>Festival</span>
+                        </li>
+
+                        <li class="item">
+                            <img src="svg/zap.svg" alt="" class="feather feather-zap">
+                            <span>Concerts</span>
+                        </li>
+                    </ul>
+                </div>
+                <!-- left content ends -->
+            </div>
+            <!-- left bar ends -->
+        </div>
+    </body>
 </html>
