--- a/index.html
+++ b/index.html
@@ -22,53 +22,53 @@
                     <ul class="actions-list">
                         <li class="item">
                             <img src="svg/inbox.svg" alt="" class="feather feather-inbox">
-                            <span>Inbox</span>
+                            <span>Caixa de Entrada</span>
                         </li>
 
                         <li class="item">
                             <img src="svg/star.svg" alt="" class="feather feather-star">
-                            <span>Today</span>
+                            <span>Hoje</span>
                         </li>
 
                         <li class="item">
                             <img src="svg/calender.svg" alt="" class="feather feather-calendar">
-                            <span>Upcoming</span>
+                            <span>Chegando</span>
                         </li>
 
                         <li class="item">
                             <img src="svg/hash.svg" alt="" class="feather feather-hash">
-                            <span>Important</span>
+                            <span>Importante</span>
                         </li>
 
                         <li class="item">
                             <img src="svg/users.svg" alt="" class="feather feather-users">
-                            <span>Mentings</span>
+                            <span>Reuniões</span>
                         </li>
 
                         <li class="item">
                             <img src="svg/trash.svg" alt="" class="feather feather-trash">
-                            <span>Trash</span>
+                            <span>Lixeira</span>
                         </li>
                     </ul>
                     <ul class="category-list">
                         <li class="item">
                             <img src="svg/users.svg" alt="" class="feather feather-users">
-                            <span>Family</span>
+                            <span>Familia</span>
                         </li>
 
                         <li class="item">
                             <img src="svg/sun.svg" alt="" class="feather feather-sun">
-                            <span>Vacation</span>
+                            <span>Ferias</span>
                         </li>
 
                         <li class="item">
                             <img src="svg/trending.svg" alt="" class="feather feather-trending-up">
-                            <span>Festival</span>
+                            <span>Festas</span>
                         </li>
 
                         <li class="item">
                             <img src="svg/zap.svg" alt="" class="feather feather-zap">
-                            <span>Concerts</span>
+                            <span>Eventos</span>
                         </li>
                     </ul>
                 </div>
