inicio da segunda etapa das tags para pagina

--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
                 <!-- left content ends -->
             </div>
             <!-- left bar ends -->
+
+            <!-- page content starts -->
+            <div class="page-content">
+                <div class="header">Today tasks</div>
+            </div>
+            <!-- page content ends -->
         </div>
     </body>
 </html>
