Adição dos inputs

--- a/index.html
+++ b/index.html
@@ -78,7 +78,30 @@
 
             <!-- page content starts -->
             <div class="page-content">
-                <div class="header">Today tasks</div>
+                <div class="header">Today Tasks</div>
+                <!-- content categories starts -->
+                <div class="content-categories">
+                    <div class="label-wrapper">
+                        <input type="radio" name="nav" id="opt-1" class="nav-item">
+                        <label class="category" for="opt-1">All</label>
+                    </div>
+
+                    <div class="label-wrapper">
+                        <input type="radio" name="nav" id="opt-2" class="nav-item">
+                        <label class="category" for="opt-2">Important</label>
+                    </div>
+
+                    <div class="label-wrapper">
+                        <input type="radio" name="nav" id="opt-3" class="nav-item">
+                        <label class="category" for="opt-3">Notes</label>
+                    </div>
+
+                    <div class="label-wrapper">
+                        <input type="radio" name="nav" id="opt-4" class="nav-item">
+                        <label class="category" for="opt-4">Links</label>
+                    </div>
+                </div>
+                <!-- content categories ends -->
             </div>
             <!-- page content ends -->
         </div>
