--- a/index.html
+++ b/index.html
@@ -102,6 +102,91 @@
                     </div>
                 </div>
                 <!-- content categories ends -->
+
+                <!-- taskts wrapper starts -->
+                <div class="tasks-wrapper">
+                    <div class="tasks">
+                        <input type="checkbox" name="task" id="item-1" class="task-item" checked>
+                        <label for="item-1">
+                            <span class="label-text">Dashboard Design Implementation</span>
+                        </label>
+                        <span class="tag approved">Approved</span>
+                    </div>
+
+                    <div class="tasks">
+                        <input type="checkbox" name="task" id="item-2" class="task-item" checked>
+                        <label for="item-2">
+                            <span class="label-text">Create a userflow</span>
+                        </label>
+                        <span class="tag progress">In Progress</span>
+                    </div>
+
+                    <div class="tasks">
+                        <input type="checkbox" name="task" id="item-3" class="task-item" >
+                        <label for="item-3">
+                            <span class="label-text">Aplication Implementation</span>
+                        </label>
+                        <span class="tag review">In Review</span>
+                    </div>
+
+                    <div class="tasks">
+                        <input type="checkbox" name="task" id="item-4" class="task-item" >
+                        <label for="item-4">
+                            <span class="label-text">Create a Dashboard Design</span>
+                        </label>
+                        <span class="tag progress">In Progress</span>
+                    </div>
+
+                    <div class="tasks">
+                        <input type="checkbox" name="task" id="item-5" class="task-item" >
+                        <label for="item-5">
+                            <span class="label-text">Create a Web Application Design</span>
+                        </label>
+                        <span class="tag approved">Approved</span>
+                    </div>
+
+                    <div class="tasks">
+                        <input type="checkbox" name="task" id="item-6" class="task-item" >
+                        <label for="item-6">
+                            <span class="label-text">Interactive Design</span>
+                        </label>
+                        <span class="tag review">In Review</span>
+                    </div>
+                    <div class="header upcoming">Upcoming Tasks</div>
+
+                    <div class="tasks">
+                        <input type="checkbox" name="task" id="item-7" class="task-item" >
+                        <label for="item-7">
+                            <span class="label-text">Dashboard Design Implementation</span>
+                        </label>
+                        <span class="tag waiting">Waiting</span>
+                    </div>
+
+                    <div class="tasks">
+                        <input type="checkbox" name="task" id="item-8" class="task-item" >
+                        <label for="item-8">
+                            <span class="label-text">Create a userflow</span>
+                        </label>
+                        <span class="tag waiting">Waiting</span>
+                    </div>
+
+                    <div class="tasks">
+                        <input type="checkbox" name="task" id="item-9" class="task-item" >
+                        <label for="item-9">
+                            <span class="label-text">Application Implementation</span>
+                        </label>
+                        <span class="tag waiting">Waiting</span>
+                    </div>
+
+                    <div class="tasks">
+                        <input type="checkbox" name="task" id="item-10" class="task-item" >
+                        <label for="item-10">
+                            <span class="label-text">Create a Dashboard Design</span>
+                        </label>
+                        <span class="tag waiting">Waiting</span>
+                    </div>
+                </div>
+                <!-- taskts wrapper ends -->
             </div>
             <!-- page content ends -->
         </div>
