Adição das tags de img e para adicionar os membros de reuniões

--- a/index.html
+++ b/index.html
@@ -189,6 +189,103 @@
                 <!-- taskts wrapper ends -->
             </div>
             <!-- page content ends -->
+
+            <!-- rigth bar starts -->
+            <div class="rigth-bar">
+                <div class="top-part">
+                    <img src="svg/users.svg" alt="" class="feather feather-users">
+                    <div class="count">6</div>
+                </div>
+
+                <div class="header">Schedule</div>
+                <div class="right-content">
+                    <div class="tas-box yellow">
+                        <div class="description-task">
+                            <div class="time">08:00 - 09:00 AM</div>
+                            <div class="task-name">Product Review</div>
+                        </div>
+                        <div class="more-button"></div>
+                        <div class="members">
+                            <img src="images/img1.jpg" alt="membro">
+                            <img src="images/img2.jpg" alt="membro-2">
+                            <img src="images/img3.jpg" alt="membro-3">
+                            <img src="images/img4.jpg" alt="membro-4">
+                        </div>
+                    </div>
+
+                    <div class="tas-box blue">
+                        <div class="description-task">
+                            <div class="time">10:00 - 11:00 AM</div>
+                            <div class="task-name">Design Meeting</div>
+                        </div>
+                        <div class="more-button"></div>
+                        <div class="members">
+                            <img src="images/img5.jpg" alt="membro">
+                            <img src="images/img6.jpg" alt="membro-2">
+                            <img src="images/img7.jpg" alt="membro-3">
+                        </div>
+                    </div>
+
+                    <div class="tas-box red">
+                        <div class="description-task">
+                            <div class="time">01:00 - 12:00 PM</div>
+                            <div class="task-name">Team Meeting</div>
+                        </div>
+                        <div class="more-button"></div>
+                        <div class="members">
+                            <img src="images/img1.jpg" alt="membro">
+                            <img src="images/img2.jpg" alt="membro-2">
+                            <img src="images/img3.jpg" alt="membro-3">
+                            <img src="images/img4.jpg" alt="membro-4">
+                        </div>
+                    </div>
+
+                    <div class="tas-box green">
+                        <div class="description-task">
+                            <div class="time">03:00 - 04:00 PM</div>
+                            <div class="task-name">Team Meeting</div>
+                        </div>
+                        <div class="more-button"></div>
+                        <div class="members">
+                            <img src="images/img5.jpg" alt="membro">
+                            <img src="images/img6.jpg" alt="membro-2">
+                            <img src="images/img7.jpg" alt="membro-3">
+                            <img src="images/img8.jpg" alt="membro-4">
+                            <img src="images/img9.jpg" alt="membro-5">
+                        </div>
+                    </div>
+
+                    <div class="tas-box blue">
+                        <div class="description-task">
+                            <div class="time">08:00 - 09:00 PM</div>
+                            <div class="task-name">Realease Event </div>
+                        </div>
+                        <div class="more-button"></div>
+                        <div class="members">
+                            <img src="images/img5.jpg" alt="membro">
+                            <img src="images/img6.jpg" alt="membro-2">
+                            <img src="images/img7.jpg" alt="membro-3">
+                            <img src="images/img8.jpg" alt="membro-4">
+                            <img src="images/img9.jpg" alt="membro-5">
+                        </div>
+                    </div> 
+
+                    <div class="tas-box yellow">
+                        <div class="description-task">
+                            <div class="time">11:00 -12:00 PM</div>
+                            <div class="task-name">Realease Event </div>
+                        </div>
+                        <div class="more-button"></div>
+                        <div class="members">
+                            <img src="images/img1.jpg" alt="membro">
+                            <img src="images/img2.jpg" alt="membro-2">
+                            <img src="images/img3.jpg" alt="membro-3">
+                            <img src="images/img4.jpg" alt="membro-4">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- rigth bar ends -->
         </div>
     </body>
 </html>
