--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <!-- page content ends -->
 
             <!-- rigth bar starts -->
-            <div class="rigth-bar">
+            <div class="right-bar">
                 <div class="top-part">
                     <img src="svg/users.svg" alt="" class="feather feather-users">
                     <div class="count">6</div>
@@ -199,7 +199,7 @@
 
                 <div class="header">Schedule</div>
                 <div class="right-content">
-                    <div class="tas-box yellow">
+                    <div class="task-box yellow">
                         <div class="description-task">
                             <div class="time">08:00 - 09:00 AM</div>
                             <div class="task-name">Product Review</div>
@@ -213,7 +213,7 @@
                         </div>
                     </div>
 
-                    <div class="tas-box blue">
+                    <div class="task-box blue">
                         <div class="description-task">
                             <div class="time">10:00 - 11:00 AM</div>
                             <div class="task-name">Design Meeting</div>
@@ -226,7 +226,7 @@
                         </div>
                     </div>
 
-                    <div class="tas-box red">
+                    <div class="task-box red">
                         <div class="description-task">
                             <div class="time">01:00 - 12:00 PM</div>
                             <div class="task-name">Team Meeting</div>
@@ -240,7 +240,7 @@
                         </div>
                     </div>
 
-                    <div class="tas-box green">
+                    <div class="task-box green">
                         <div class="description-task">
                             <div class="time">03:00 - 04:00 PM</div>
                             <div class="task-name">Team Meeting</div>
@@ -255,7 +255,7 @@
                         </div>
                     </div>
 
-                    <div class="tas-box blue">
+                    <div class="task-box blue">
                         <div class="description-task">
                             <div class="time">08:00 - 09:00 PM</div>
                             <div class="task-name">Realease Event </div>
@@ -270,7 +270,7 @@
                         </div>
                     </div> 
 
-                    <div class="tas-box yellow">
+                    <div class="task-box yellow">
                         <div class="description-task">
                             <div class="time">11:00 -12:00 PM</div>
                             <div class="task-name">Realease Event </div>
